syntax = "proto3";

package ticketpb;

import "google/protobuf/timestamp.proto";

message Ticket {
    string id = 1;
    string subject = 2;
    google.protobuf.Timestamp createdAt = 3;
    google.protobuf.Timestamp updatedAt = 4;
}

service TicketService {
    rpc List(ListRequest) returns (ListResponse) {}
    rpc Create(CreateRequest) returns (CreateResponse) {}
}

message ListRequest {}

message ListResponse {
    repeated Ticket tickets = 1;
}

message CreateRequest {
    string subject = 1;
}

message CreateResponse {
    Ticket ticket = 1;
}
